# rpc

./: CMakeLists.txt  README.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
include/: mprpcapplication.h  mprpcconfig.h  rpcprovider.h
lib/include/: lockqueue.h  mprpcchannel.h  mprpccontroller.h
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcprovider.cc  zookeeperutil.cc
test/protobuf/: a.out  main.cc  test.proto
